# cloud-resume-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
handler/: handler.py
terraform/: .terraform.lock.hcl  db.tf  gateway.tf  iam.tf  lambda.tf  outputs.tf  providers.tf  variables.tf  vpc.tf
tests/: test_handler.py
